<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <groupId>com.github.agentos</groupId>
    <artifactId>agentos-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>AgentOS</name>
    <description>Modular agent runtime platform</description>

    <modules>
        <module>agentos-kernel</module>
        <module>agentos-tool</module>
        <module>agentos-memory</module>
        <module>agentos-hitl</module>
        <module>agentos-planner</module>
        <module>agentos-agent</module>
        <module>agentos-server</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.agentos</groupId>
                <artifactId>agentos-kernel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.agentos</groupId>
                <artifactId>agentos-agent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.agentos</groupId>
                <artifactId>agentos-planner</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.agentos</groupId>
                <artifactId>agentos-tool</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.agentos</groupId>
                <artifactId>agentos-memory</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.agentos</groupId>
                <artifactId>agentos-hitl</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
